# user-admin

./: .env  .gitignore  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.yml  mkdocs.yml  prod-backend-deploy.yml  prod-frontend-deploy.yml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: pyproject.toml
docs/: additional-settings.md  contributing.md  deployment.md  get-started.md  support.md  technology-selection.md
fastapi_backend/: .env.example  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  requirements.txt  start.sh  vercel.json  vercel.prod.json  watcher.py
fastapi_backend/alembic_migrations/: env.py
fastapi_backend/alembic_migrations/versions/: 402d067a8b92_added_user_table.py  b389592974f8_add_item_model.py
fastapi_backend/api/: index.py
fastapi_backend/app/: config.py  database.py  email.py  main.py  models.py  schemas.py  users.py  utils.py
fastapi_backend/app/email_templates/: password_reset.html
fastapi_backend/app/routes/: items.py
fastapi_backend/commands/: generate_openapi_schema.py
fastapi_backend/tests/: conftest.py  test_database.py  test_email.py
fastapi_backend/tests/commands/: test_generate_openapi_schema.py
fastapi_backend/tests/commands/files/: openapi_test.json  openapi_test_output.json
fastapi_backend/tests/main/: test_main.py
fastapi_backend/tests/routes/: test_items.py
fastapi_backend/tests/utils/: test_utils.py
frontend/: index.html  nginx.conf
nextjs-frontend/: .env.example  .gitignore  Dockerfile  eslint.config.mjs  jest.config.ts  middleware.ts  (+9 more)
(+62 files in other folders)
